--- a/style.css
+++ b/style.css
@@ -4,3 +4,121 @@
     box-sizing: border-box;
 }
 
+
+header{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+    background: linear-gradient(#13aa34,#23bb,#000);
+}
+
+.heading ul{
+    display: flex;
+}
+
+.logo{
+    color: rgb(245, 241, 234);
+    transition-duration: 2s;
+    font-weight: 850;
+}
+
+.logo a:hover{
+   color: rgba(238, 214, 109, 0.986);
+   transition: 2s ease-in-out;
+}
+
+header ul li a {
+    margin: 5px;
+    text-decoration: none;
+    list-style: none;
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    position: relative;
+    color: white;
+    margin: 2px 14px;
+    font-size: 18px;
+    transition-duration: 2s;
+}
+
+header ul li a:active{
+    color: aqua;
+}
+
+header ul li a:hover{
+    color: rgb(245, 165, 7);
+    transition-duration: 2s;
+}
+
+header ul li a::before{
+    content: "";
+    height: 2px;
+    width: 0px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: white;
+    transition-duration: 1s;
+}
+
+header ul li a:hover::before{
+    width: 100%;
+    transition-duration: 2s;
+    background-color: rgb(243,168,7);
+}
+
+#input{
+    height: 30px;
+    width: 300px;
+    text-decoration: none;
+    border: 0px;
+    padding: 5px;
+}
+
+.logo a{
+    color: white;
+    font-size: 35px;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+ion-icon{
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    color: black;
+}
+
+ion-icon:hover{
+    cursor: pointer;
+}
+
+.search a{
+    display: flex;
+}
+
+header a ion-icon {
+    position: relative;
+    right: 4em;
+}
+
+.btn{
+    border-color:#000;
+    background-color: #000;
+    color: silver;
+    border-radius: 5px;
+    padding: 5px;
+    margin:5px;
+}
+
+.btn:hover{
+    background:red;
+}
+
+.img-slider img{
+    height: 720px;
+    width: 1259px;
+    position: relative;
+}
