--- a/style.css
+++ b/style.css
@@ -250,3 +250,252 @@ header a ion-icon {
    transition-duration: 0.8s;
    border-radius: 12px;
 }
+
+footer{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    align-items: center;
+    color: white;
+}
+
+.footer1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    margin-top: 15px;
+}
+
+.social-media{
+    display: flex;
+    justify-content: center;
+    color: white;
+    flex-wrap: wrap;
+}
+
+.social-media a{
+    color: white;
+    margin: 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+    color: wheat;
+}
+
+.social-media a ion-icon{
+    color: wheat;
+    background-color: black;
+}
+
+.social-media a:hover ion-icon{
+    color: red;
+    transform: translateY(5px);
+}
+
+.footer2{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    text-decoration: none;
+    flex-wrap: wrap;
+}
+
+.footer0{
+    font-weight: 1200;
+    transition-duration: 1s;
+}
+
+.footer0:hover{
+    color: rgb(243,168,7);
+}
+
+.footer2 .heading{
+    font-weight: 900;
+    font-size: 18px;
+}
+
+.footer3{
+    margin-top: 60px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.footer2 .heading:hover{
+    color: rgb(243,168,7);
+}
+
+.footer2 .div:hover{
+    transform: scale(1.05);
+}
+
+.footer3 h4{
+    margin: 0 10px;
+}
+
+.footer2 div{
+    margin: 10px;
+}
+
+.menu{
+    visibility: hidden;
+}
+
+.heading1 .ham:active{
+    color: red;
+}
+
+.items{
+    overflow: hidden;
+}
+
+.ham,.close{
+    cursor: pointer;
+}
+
+@media screen and (max-width:1250px){
+    .heading ul li{
+        display: none;
+    }
+    .items{
+        transform: scale(0.9);
+    }
+    .img-slider img{
+        height: 60vw;
+        width: 80vw;
+    }
+    .ham:active{
+        color: red;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .menu a ion-icon{
+        position: absolute;
+    }
+    @keyframes slide1 {
+        0%{
+            left: 0vw;
+        }
+        15%{
+            left: 0vw;
+        }
+        20%{
+            left: -80vw;
+        }
+        32%{
+            left: -80vw;
+        }
+        35%{
+            left: -160vw;
+        }
+        47%{
+            left: -160vw;
+        }
+        50%{
+            left: -240vw;
+        }
+        63%{
+            left: -240vw;
+        }
+        66%{
+            left: -320vw;
+        }
+        79%{
+            left: -400vw;
+        }
+        82%{
+            left: -400vw;
+        }
+        100%{
+            left: 0vw;
+        }
+    }
+    .menu ul{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        background-color: #000;
+        left: 0;
+        top: 0;
+        z-index: 11;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
+    }
+    .close{
+        z-index: 34;
+        color: white;
+        background-color: #000;
+    }
+    .close:active{
+        color: red;
+    }
+    .menu ul li{
+        list-style: none;
+        margin: 20px;
+        border-top: 3px solid white;
+        width: 80%;
+        text-align: center;
+        padding-left: 10px;
+    }
+
+    .menu ul li a{
+        text-decoration: none;
+        padding-top:10px ;
+        color: white;
+        font-weight: 900;
+    }
+    .menu ul li a:hover{
+        color: rgb(240,197,6);
+    }
+    .img-slider{
+        display: flex;
+        float: left;
+        position: relative;
+        width: 80%;
+        height: 60%;
+        animation-name: slide1;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        transition-duration: 2s;
+    }
+    .section1{
+        width: 80%;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+        margin: 0px auto;
+    }
+
+    .heading1{
+        opacity: 1;
+        position: relative;
+        bottom: 8px;
+    }
+
+    .search a{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+    .heading1 .ham{
+        background-color: black;
+        color: blanchedalmond;
+    }
+
+    #input{
+        width: 200px;
+        flex-shrink: 2;
+    }
+
+    header{
+        height: 150px;
+    }
+}
