--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -265,3 +265,88 @@ nav ul li{
     text-align: center;
     font-size: 1vw;
 }
+
+@media only screen and (max-width:750%){
+    #about{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about_inner{
+        display: block;
+        flex-direction: column;
+        height: auto;
+        margin: 20px 0;
+    }
+
+    .about_inner h2{
+        text-align: center;
+        line-height: 1.2rem;
+        font-size: 26px;
+    }
+
+    .video-container{
+        display: flex;
+        justify-content: center;
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 25px;
+        height: 0;
+    }
+
+    .video-container iframe{
+        box-sizing: border-box;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+    }
+
+    #footer{
+        height: 1170px;
+        grid-template-columns: 100%;
+        grid-template-areas: "contact"
+        "hours"
+        "copy";
+        background-color: #000;
+        color: hsla(0,0%,70%,1);
+        text-align: center;
+        font-size: 1.3rem;
+
+    }
+
+    #footer section{
+        padding: 20px;
+        align-self: center;
+    }
+
+    #map h2{
+        padding-top: 10px;
+    }
+
+    #map{
+        border-top: hsla(0,0%,20%,1)solid 1px;
+        border-bottom: hsla(0,0%,20%,1)solid 1px;
+    }
+
+    #gmap_canvas{
+        width: 90%;
+        height: 300px;
+        margin: 20px auto;
+    }
+
+    #hours{
+        border-bottom: hsla(0,0,20%,1);
+    }
+
+    #hours ul li{
+        line-height: 40px;
+    }
+
+    #copy{
+        font-size: 10px;
+    }
+
+}
