--- a/Project-3/e-commerce/style.css
+++ b/Project-3/e-commerce/style.css
@@ -475,7 +475,72 @@ body {
     opacity: 1;
     pointer-events: all;
   }
+
+  .hero{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
+    min-height: 400px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .hero-title{margin-bottom: 10px;}
+  .hero-title > strong {display: block;}
+
+  .hero-text{
+    color: var(--onyx);
+    font-family: var(--ff-roboto);
+    font-size: var(--fs-8);
+    line-height: 1.8;
+    max-width: 46ch;
+    margin-bottom: 25px;
+  }
   
+  .collection-card{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-block: 45px 25px;
+  }
   
+
+  .product .section-title{
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
+  .filter-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+
+  .filter-btn{
+    color: var(--onyx);
+    padding: 10px 16px;
+    font-family: var(--ff-roboto);
+    font-size: var(--fs-7);
+    font-weight: var(--fw-500);
+    border: 1px solid var(--gainsboro);
+    border-radius: 30px;
+  }
   
+  .filter-btn .active{
+    background: var(--bittersweet);
+    color: var(--white);
+    border-color: var(--bittersweet);
+  }
   
+  .product-list{
+    display: grid;
+    gap: 50px 25px;
+  }
