--- a/Project-3/e-commerce/style.css
+++ b/Project-3/e-commerce/style.css
@@ -544,3 +544,689 @@ body {
     display: grid;
     gap: 50px 25px;
   }
+
+  /* CTA */
+
+  .cta-list{
+    display: grid;
+    gap: 40px;
+  }
+
+  .cta-card{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: var(--white);
+    text-align: center;
+    padding: 50px 20px;
+  }
+
+  .cta-card .card-subtitle{
+    color: inherit;
+    line-height: 1.3;
+    margin-bottom: 20px;
+  }
+
+  /* special */
+  .special-banner{
+    height: 500px;
+    background-color: var(--smoky-black);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    padding: 50px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .special-banner .banner-title{
+    margin-block: 40px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .special .section-title .text {min-width: max-content;}
+
+  .special .section-title .line{
+    width: 100%;
+    height: 1px;
+    background: var(--gainsboro);
+  }
+
+  /* service */
+
+  .service-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.service-card{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.service-card .card-icon{
+  background: var(--bittersweet);
+  min-width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+}
+
+.service-card .card-title{
+  font-size: var(--fs-6);
+  margin-bottom: 8px;
+}
+
+.service-card .card-text{
+  color: var(--onyx);
+  font-family: var(--ff-roboto);
+  font-size: var(--fs-7);
+}
+
+.service-card .card-text span{
+  display: inline-block;
+  color: var(--bittersweet);
+}
+
+/* insta post */
+
+.insta-post-list{gap: 0;}
+
+.insta-post-list .insta-post-item{
+  position: relative;
+  min-width: 33.33%;
+  aspect-ratio: 1 / 1;
+}
+
+.insta-post-link{
+  position: absolute;
+  inset: 0;
+  display: grid;
+  place-items: center;
+  background: var(--oxford-blue_60);
+  opacity: 0;
+  transition: var(--transition-1);
+}
+
+.insta-post-link:is(:hover,:focus) {opacity: 1;}
+
+.footer{
+  font-family: var(--ff-roboto);
+}
+
+.footer-top{
+  background: var(--cultured);
+}
+
+.footer-brand{
+  padding-bottom: 50px;
+  border-bottom: 1px solid var(--gainsboro);
+  margin-bottom: 50px;
+}
+
+.footer-brand .logo {margin-bottom: 15px;}
+
+.social-list{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.social-link {
+  background: var(--gainsboro);
+  color: var(--onyx);
+  font-size: 20px;
+  padding: 10px;
+  transition: var(--transition-1);
+}
+
+.social-link:is(:hover, :focus) {
+  background: var(--bittersweet);
+  color: var(--white);
+}
+
+.footer-list-title {
+  position: relative;
+  color: var(--rich-black-fogra-29);
+  font-family: var(--ff-josefin-sans);
+  font-size: var(--fs-3);
+  font-weight: var(--fw-700);
+  margin-bottom: 25px;
+}
+
+.footer-list-title::after {
+  content: "";
+  display: block;
+  background: var(--bittersweet);
+  width: 50px;
+  height: 2px;
+  margin-top: 10px;
+}
+
+.footer-link {
+  color: var(--onyx);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-block: 6px;
+  transition: var(--transition-1);
+}
+
+a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
+
+.footer-link-text { flex: 1; }
+
+.footer-list:not(:last-child) { margin-bottom: 30px; }
+
+.footer-list:first-child ion-icon {
+  color: var(--bittersweet);
+  font-size: 22px;
+}
+
+.table-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: left;
+  padding-block: 6px;
+}
+
+.table-head {
+  color: var(--rich-black-fogra-29);
+  font-weight: var(--fw-500);
+}
+
+.table-data { color: var(--onyx); }
+
+.newsletter-text {
+  color: var(--onyx);
+  line-height: 1.7;
+  margin-bottom: 20px;
+}
+
+.newsletter-form { position: relative; }
+
+.newsletter-input {
+  background: var(--white);
+  color: var(--onyx);
+  padding: 15px 25px;
+  padding-right: 120px;
+}
+
+.newsletter-form .btn-primary {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  font-family: var(--ff-josefin-sans);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-600);
+  padding-inline: 20px;
+}
+
+.footer-bottom {
+  background: var(--rich-black-fogra-29);
+  padding-block: 20px;
+}
+
+.copyright {
+  text-align: center;
+  color: var(--white);
+}
+
+.copyright-link {
+  display: inline-block;
+  color: var(--bittersweet);
+}
+
+
+/* go to top */
+.go-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: var(--bittersweet);
+  color: var(--white);
+  font-size: 20px;
+  padding: 10px;
+  border: 4px solid var(--white);
+  border-radius: 50%;
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition-1);
+  z-index: 2;
+}
+
+.go-top-btn.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.go-top-btn:is(:hover, :focus) { background: var(--salmon); }
+
+/* media queries for responsive design */
+@media (min-width: 575px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    --fs-1: 4rem;
+
+  }
+
+
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container {
+    max-width: 650px;
+    width: 100%;
+    margin-inline: auto;
+  }
+
+  .has-scrollbar > li { min-width: calc(50% - 12.5px); }
+
+
+
+  /**
+   * HERO
+   */
+
+  .hero-text { font-size: var(--fs-7); }
+
+
+
+  /**
+   * PRODUCTS
+   */
+
+  .product-list { grid-template-columns: 1fr 1fr; }
+
+
+
+  /**
+   * CTA
+   */
+
+  .cta-card { text-align: left; }
+
+  .cta-card .card-title { max-width: 14ch; }
+
+  .cta-card .btn-link { margin-inline: 0; }
+
+
+
+  /**
+   * INSTA POST
+   */
+
+  .insta-post-list .insta-post-item { min-width: 25%; }
+
+
+
+  /**
+   * FOOTER
+   */
+
+  .footer-brand .logo { margin-bottom: 0; }
+
+  .footer-brand {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer-link-box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
+  }
+
+}
+
+
+
+
+
+/**
+ * responsive for larger than 768px screen
+ */
+
+@media (min-width: 768px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    --fs-2: 3rem;
+
+  }
+
+
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 720px; }
+
+  .h4 { --fs-5: 2rem; }
+
+
+
+  /**
+   * SPECIAL
+   */
+
+  .special-banner .banner-title { --fs-4: 2.2rem; }
+
+  .special-product .has-scrollbar > li { min-width: 100%; }
+
+  .special .container {
+    display: flex;
+    gap: 25px;
+  }
+
+  .special .section-title { margin-block-start: 0; }
+
+  .special-banner,
+  .special-product { min-width: calc(50% - 12.5px); }
+
+  .special-banner { height: auto; }
+
+
+
+  /**
+   * INSTA POST
+   */
+
+  .insta-post-list .insta-post-item { min-width: 20%; }
+
+
+
+  /**
+   * GO TOP
+   */
+
+  .go-top-btn {
+    padding: 15px;
+    border-width: 6px;
+    bottom: 30px;
+    right: 30px;
+  }
+
+}
+
+
+
+
+
+/**
+ * responsive for larger than 992px screen
+ */
+
+@media (min-width: 992px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    --fs-3: 2.4rem;
+
+  }
+
+
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 970px; }
+
+  .has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+
+
+
+  /**
+   * HEADER
+   */
+
+  .nav-open-btn,
+  .nav-close-btn,
+  .navbar .logo,
+  .nav-action-text,
+  .overlay { display: none; }
+
+  .navbar,
+  .navbar-list,
+  .nav-action-list { all: unset; }
+
+  .navbar-item:not(:last-child) { border: none; }
+
+  .navbar-list,
+  .nav-action-list { display: flex; }
+
+  .nav-action-list { gap: 20px; }
+
+  .navbar {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+  }
+
+  .navbar-list {
+    margin-inline: auto;
+    gap: 35px;
+  }
+
+  .navbar-link {
+    font-family: var(--ff-roboto);
+    font-weight: var(--fw-500);
+  }
+
+  .nav-action-list > li:first-child { display: block; }
+
+  .nav-action-btn { position: relative; }
+
+  .nav-action-badge ion-icon { --ionicon-stroke-width: 30px; }
+
+  .nav-action-badge {
+    position: absolute;
+    top: 5px;
+    right: -12px;
+  }
+
+
+
+  /**
+   * HERO
+   */
+
+  .hero { height: 480px; }
+
+
+
+  /**
+   * PRODUCTS
+   */
+
+  .product-list { grid-template-columns: repeat(3, 1fr); }
+
+
+
+  /**
+   * CTA
+   */
+
+  .cta-list {
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+  }
+
+  .cta-card { padding-inline: 50px; }
+
+
+
+  /**
+   * SPECIAL
+   */
+
+  .special-banner { min-width: calc(33.33% - 25px); }
+
+  .special-product { min-width: 66.66%; }
+
+  .special-product .has-scrollbar > li { min-width: calc(50% - 12.5px); }
+
+
+
+  /**
+   * INSTA POST
+   */
+
+  .insta-post-list .insta-post-item { min-width: 16.666%; }
+
+}
+
+
+
+
+
+/**
+ * responsive for larger than 1200px screen
+ */
+
+@media (min-width: 1200px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    --fs-1: 5rem;
+    --fs-2: 3.6rem;
+
+  }
+
+
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 1280px; }
+
+
+
+  /**
+   * HERO
+   */
+
+  .hero { height: 580px; }
+
+  .hero .container { max-width: 1000px; }
+
+  .hero-text {
+    font-size: var(--fs-6);
+    max-width: 50ch;
+  }
+
+
+
+  /**
+   * PRODUCTS
+   */
+
+  .product-list { grid-template-columns: repeat(4, 1fr); }
+
+
+
+  /**
+   * SPECIAL
+   */
+
+  .special-banner { min-width: calc(25% - 25px); }
+
+  .special-product .has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+
+  .special-banner .banner-title { --fs-4: 2.4rem; }
+
+
+
+  /**
+   * SERVICE
+   */
+
+  .service-item { width: 275px; }
+
+  .service-card .card-icon {
+    min-width: 70px;
+    height: 70px;
+  }
+
+  .service-card .card-title { --fs-6: 2rem; }
+
+
+
+  /**
+   * INSTA POST
+   */
+
+  .insta-post { padding-block-end: 0; }
+
+  .insta-post-list .insta-post-item { min-width: 12.5%; }
+
+  .insta-post-list { padding-bottom: 0; }
+
+
+
+  /**
+   * FOOTER
+   */
+
+  .footer-link-box {
+    grid-template-columns: 1.5fr 1fr 1fr 1.5fr;
+    gap: 50px;
+  }
+
+}
+
+
+
+
+
+
+
+
