--- a/Blog/views/layout.ejs
+++ b/Blog/views/layout.ejs
@@ -4,49 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY Blog.App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <style>
-    body{
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: rgb(56, 74, 84);
-    }
-    
-    header{
-        background-color: #333;
-        color: white;
-        padding: 1em;
-        text-align: center;
-    }
-
-    main{
-        padding: 1em;
-    }
-
-    form div{
-        margin-bottom: 1em;
-    }
-    input,textarea{
-        width: 100%;
-        padding: 0.6rem;
-    }
-
-    button{
-        padding: 0.5rem 1em;
-        background-color: #333;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-    </style>
+  
 </head>
 <body>
-    <header>
-        <h1><a href="/">Blog</a></h1>
+    <header class="bg-dark text-white text-center py-4">
+        <h1><a href="/" class="text-white text-decoration-none">Blog</a></h1>
     </header>
     <main>
-           <!--Renderhtml ejs tag-->
+
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        gsap.from('h2', { duration: 1, opacity: 0, y: -50 });
+        gsap.from('li', { duration: 1, opacity: 0, y: 30, stagger: 0.2 });
+    });
+</script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
