--- a/Blog/views/new-post.ejs
+++ b/Blog/views/new-post.ejs
@@ -1,28 +1,17 @@
 <%- include('layout') %>
-<style>
-     form div{
-        margin-bottom: 1em;
-    }
-    input,textarea{
-        width: 100%;
-        padding: 0.6rem;
-    }
-
-    button{
-        padding: 0.5rem 1em;
-        background-color: #333;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-</style>
-<h2>Create New</h2>
+<div class="card">
+    <div class="card-header">
+<h2>Create New Blog post</h2>
 <form action="/new" method="post">
-    <div>
+    <div class="form-group">
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" required>
+        </div>
+        <div class="form-group">
     <label for="content">Content:</label>
-    <textarea name="content" id="content" required></textarea>
+    <textarea name="content" id="content" class="form-control" required></textarea>
     </div>
-    <button type="submit">submit</button>
+    <button type="submit" class="btn btn-success">submit</button>
 </form>
+</div>
+</div>
