--- a/Blog/views/post.ejs
+++ b/Blog/views/post.ejs
@@ -1,5 +1,10 @@
 <%- include('layout') %>
-
-<h2><%= post.title %></h2>
-<p><%= post.content %></p>
-<a href="/">Back to Home</a>
+<div class="card">
+    <div class="card-header">
+    <h2><%= post.title %></h2>
+    </div>
+    <div class="card-body">
+    <p><%= post.content %></p>
+    <a href="/" class="btn btn-secondary">Back to Home</a>
+    </div>
+</div>
